2010-02-16  Alan McGovern  <amcgovern@novell.com>

	* bitmapimage.cpp: Fix a potential null deref when we try to
	  load an invalid image

2010-02-16  Alan McGovern  <amcgovern@novell.com>

	* multiscaleimage.cpp: We should emit a MotionFinished event
	  after we finish opening the image. This fixes
	  http://www.preraphaelites.org and makes our event emission
	  more compatible with SL.

2010-02-16  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* mediaelement.cpp: Don't show a scary critical message if somebody
	happens to hit play when we don't have a source.

2010-02-09  Sebastien Pouliot  <sebastien@ximian.com>

	* writeablebitmap.cpp: Fix possible crash when GetSurface returns
	NULL

2010-02-12  Alan McGovern  <amcgovern@novell.com>

	* validators.h:
	* validators.cpp:
	* frameworkelement.h: We now throw an Exception instead of an
	  ArgumentException (SL2 -> SL3).

2010-02-12  Aaron Bockover  <abockover@novell.com>

	* pipeline-ui.cpp (CodecDownloader::Show): Set nicer scroll
	policy on the EULA view, since a horizontal scroll bar looks
	ugly

2010-02-11  Larry Ewing  <lewing@novell.com>

	* multiscaleimage.h (MediaBase): fix hit testing for MSI.

	Fixes panning on olympics photo player.

2010-02-11  David Reveman  <davidr@novell.com>

	* effect.h:
	* effect.cpp: Fix border calculations in table based blur filter.

2010-02-11  Chris Toshok  <toshok@ximian.com>

	* deployment.cpp (Dispose): guard against null change_args (can
	::Dispose be called multiple times or something?)

	* dependencyobject.cpp (ProviderValueChanged): don't notify
	listeners if we're shutting down the deployment.  fixes a crash
	and should also make us a bit faster if we're setting values in
	::Dispose overrides.

	* dependencyobject.h: re-enable EVENT_ARG_REUSE.

2010-02-11  Chris Toshok  <toshok@ximian.com>

	* dependencyobject.h: disable EVENT_ARG_REUSE for now.

	* deployment.cpp (Dispose): fix ifdef.

2010-02-11  Larry Ewing  <lewing@novell.com>
