@@ -1,3 +1,8 @@
+2010-02-16  David Reveman  <davidr@novell.com>
+
+	* effect.cpp: Add table based drop shadow filter for better
+	image surface performance.
+
 2010-02-16  Alan McGovern  <amcgovern@novell.com>
 
 	* bitmapimage.cpp: Fix a potential null deref when we try to
